Changed up the login/register buttons.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/stylesheets/main.css">
 
 
+
 </head>
 
 <body class="text-center">
@@ -82,5 +83,6 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="/js/main.js"></script>
   </body>
   </html>
