--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,9 +19,13 @@
     <h1>Schoolie, your lightweight school management system.</h1>
     <p>Sign in and view your profile!</p>
     <p>
-      <a href="/signin" class="btn btn-primary btn-lg" role="button">
+      <a href="/signin" class="btn btn-success btn-lg" role="button">
         <i class="fa fa-graduation-cap"></i>
         Sign in as Student! 
+      </a>
+      <a href="/signin" class="btn btn-danger btn-lg" role="button">
+        <span class="glyphicon glyphicon-briefcase"></span>
+        Sign in as Teacher! 
       </a>
     </p>
   </div>
