--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,9 +40,9 @@
             <li>
               {{#if user}}
               <p class="navbar-text">
-                <strong>Hi,</strong> 
-                <img src="{{user.avatar}}" width="20" height="20"> 
+                <strong>Hi, </strong> 
                 {{user.username}}
+                <img src="{{user.avatar}}" width="20" height="20"> 
               </p>
             </li>
           </ul>
@@ -51,7 +51,7 @@
               <a href="/logout">Log Out</a>
             </li>
             {{else}}
-            <a href="/signin">Sign In</a>
+            <a href="/">Sign In</a>
           </li>
           {{/if}}
         </ul>
